deprecated newInstance() are avoided.